Signed Client and Preventing XSS/CSRF

--- a/views/home.slim
+++ b/views/home.slim
@@ -3,4 +3,4 @@ p This site allows you to chat securely with your friends without the NSA
   knowing what you're talking about :).
 
 p
-  a href='/account/login/' login to start!
+  a href='/auth/login/' login to start!
