--- a/views/login.slim
+++ b/views/login.slim
@@ -1,6 +1,6 @@
 p
   div class='col-sm-4'
-  form method='post' action='/account/login' id='form-login' class='col-md-6' style='font-family:Microsoft JhengHei;'
+  form method='post' action='/auth/login' id='form-login' class='col-md-6' style='font-family:Microsoft JhengHei;'
 
   	div class='col-md-2'
   	img src='/avatar.png' class='col-md-8' style='float:left;padding:6%;'
